overflow fix

--- a/frontend/src/styles/base/_base.scss
+++ b/frontend/src/styles/base/_base.scss
@@ -22,6 +22,7 @@ html {
 body {
     @include bg($bg-darker);
     scroll-behavior: smooth;
+    overflow:hidden;
     .wrapper {
         @include wrapper(1200px);
     }
